--- a/styles.css
+++ b/styles.css
@@ -368,7 +368,7 @@ body.dark-mode .calendar-day:hover {
     display: inline-block;
 }
 .navbar ul a {
-    color: yellow;
+    color: white;
 }
 
 .nav-links a {
