--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,7 @@
 body {
   font-family: Arial, sans-serif;
   padding: 0;
-  background-color: #f5f5f5; /* Light mode background */
+  background-color: #ffffff; /* Light mode background */
   color: #000; /* Light mode text color */
   transition: background-color 0.3s ease, color 0.3s ease;
 }
